Day4_roman-numerals-converter/cfn-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
    CloudFormation Template for Roman Numerals Converter Application. 
    This template creates Python Flask Web Application on Amazon Linux 2023  
    EC2 Instance with custom security group allowing http connections on port 80, 8080 and SSH connection on port 22. 
    Roman Numerals Converter Application is downloaded from Github repository, then installed on Flask.

Parameters:
    KeyName:
      Description: Enter the name of your keyname.
      Type: AWS::EC2::KeyPair::KeyName
    LatestAmiId:
      Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
      Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'
      
Resources:
# https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-security-group.html
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Enable HTTP for Flask Web Server and SSH port to secure reach to my EC2
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp #required
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
    # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-instance.html
  ec2-instance:
    Type: AWS::EC2::Instance
    Properties: 
        ImageId: !Ref LatestAmiId
        InstanceType: t2.micro
        KeyName: !Ref KeyName
        SecurityGroups: 
          - !Ref WebServerSecurityGroup
        Tags:
          - Key: Name
            Value: !Sub Web Server of ${AWS::StackName} Stack 
        
      UserData: 
        !Base64 |
        #! /bin/bash
        dnf update -y
        dnf install python3 -y
        dnf install python3-pip -y
        pip3 install flask
        dnf install git -y
        FOLDER="https://raw.githubusercontent.com/awsdevopsteam/roman-number-conventor/master/templates"
        cd /home/ec2-user
        wget -P templates ${FOLDER}/index.html
        wget -P templates ${FOLDER}/result.html
        wget https://raw.githubusercontent.com/awsdevopsteam/roman-number-conventor/master/roman-numerals-converter-app.py
        python3 roman-numerals-converter-app.py 
          
Outputs: 
  WebsiteURL:
    Value: !Sub 
      - http://${PIA}
      - PIA: !GetAtt WebServerHost.PublicDnsName
    Description: Roman Numerals Converter Application URL
